Relaxes output.shouldContain to "isHeadless"